@@ -21,6 +21,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
@@ -122,7 +123,7 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
         }
 
         if (sortByLongestDuration) {
-            Collections.sort(values, new Comparator<Exchange>() {
+            values.sort(new Comparator<Exchange>() {
                 @Override
                 public int compare(Exchange e1, Exchange e2) {
                     long d1 = getExchangeDuration(e1);
@@ -132,7 +133,7 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
             });
         } else {
             // else sort by exchange id
-            Collections.sort(values, new Comparator<Exchange>() {
+            values.sort(new Comparator<Exchange>() {
                 @Override
                 public int compare(Exchange e1, Exchange e2) {
                     return e1.getExchangeId().compareTo(e2.getExchangeId());
@@ -194,13 +195,13 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
         @Override
         @SuppressWarnings("unchecked")
         public long getElapsed() {
-            List<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, List.class);
+            LinkedList<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, LinkedList.class);
             if (list == null || list.isEmpty()) {
                 return 0;
             }
 
             // get latest entry
-            MessageHistory history = list.get(list.size() - 1);
+            MessageHistory history = list.getLast();
             if (history != null) {
                 return history.getElapsed();
             } else {
@@ -211,13 +212,13 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
         @Override
         @SuppressWarnings("unchecked")
         public String getNodeId() {
-            List<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, List.class);
+            LinkedList<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, LinkedList.class);
             if (list == null || list.isEmpty()) {
                 return null;
             }
 
             // get latest entry
-            MessageHistory history = list.get(list.size() - 1);
+            MessageHistory history = list.getLast();
             if (history != null) {
                 return history.getNode().getId();
             } else {
@@ -238,13 +239,13 @@ public class DefaultInflightRepository extends ServiceSupport implements Infligh
         @Override
         @SuppressWarnings("unchecked")
         public String getAtRouteId() {
-            List<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, List.class);
+            LinkedList<MessageHistory> list = exchange.getProperty(Exchange.MESSAGE_HISTORY, LinkedList.class);
             if (list == null || list.isEmpty()) {
                 return null;
             }
 
             // get latest entry
-            MessageHistory history = list.get(list.size() - 1);
+            MessageHistory history = list.getLast();
             if (history != null) {
                 return history.getRouteId();
             } else {
